martian-derive/tests/ui_martian_filetype/test_number_extension.rs
use martian_derive::martian_filetype;

martian_filetype! {TxtFile, "4txt"}

fn main() {}